<resources>
    <string name="app_name">Plantastic</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="error_blank">Field cannot be blank</string>
    <string name="error_email_invalid">Email is invalid</string>
    <string name="error_password_mismatch">Passwords don\'t match</string>
    <string name="error_password_length">Password should be at least 6 characters long</string>
    <string name="error_duplicate_email">Email is already in use</string>
    <string name="error_duplicate_username">Username is already in use</string>
    <string name="error_unexpected">An unexpected error occurred. Try again later!</string>
    <string name="error_incorrect_email_password">Incorrect email or password</string>
    <string name="chats">Chats</string>
    <string name="events">Events</string>
    <string name="to_do">To Do</string>
    <string name="balances">Balances</string>
    <string name="home">Home</string>
    <string name="calendar">Calendar</string>
    <string name="settings">Settings</string>
    <string name="hello_chat_fragment">Hello chat fragment</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="your_current_food_preferences">Your current food preferences:</string>
    <string name="food_preference_hint">Enter each preference separated by a comma</string>
    <string name="your_current_dietary_restrictions">Your current dietary restrictions:</string>
    <string name="your_current_activity_preferences">Your current activity preferences:</string>
    <string name="your_availability">Your availability:</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_profile">Profile</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!--  Random Content Descriptions  -->
    <string name="content_desc_hi_welcome">Hi! Welcome</string>
    <string name="content_desc_user_icon">user icon</string>
    <string name="content_desc_friend_added">friend added</string>
    <string name="content_desc_add_friend">add friend</string>
    <string name="content_desc_group_icon">group icon</string>
    <string name="content_desc_plus_button">plus button</string>
    <string name="content_desc_send_button">send button</string>
    <string name="content_desc_time_icon">time icon</string>
    <string name="content_desc_location_icon">location icon</string>
    <string name="content_desc_individual_icon">individual icon</string>
    <string name="content_desc_calendar_icon">Calendar Icon</string>
    <string name="content_desc_add_new_event">Add new Event</string>
    <string name="content_desc_add_new_todo_item">Add new Todo item</string>
    <string name="content_desc_add_new_expenses">Add new Expenses</string>
    <string name="content_desc_settle_balances">Settle Balances</string>

    <!--  All Other Strings  -->
    <string name="message_hint">Message…</string>
    <string name="save">Save</string>
    <string name="transactions">Transactions</string>
    <string name="start_button_text">Start</string>
    <string name="end_button_text">End</string>
    <string name="busy_button_text">Busy</string>
    <string name="available_from_string">Available from: %1$s to %2$s</string>
    <string name="invalid_days_message">"The following days have an invalid value for availability: "</string>
    <string name="please_correct_availability_message">. Please correct availability to save preferences.</string>
    <string name="your_username">Your username:</string>
    <string name="enter_a_username">Enter a username</string>
    <string name="use_different_username_message">The username %1$s has been taken by another user. Please use a different username.</string>
    <string name="preferences_and_availability_updated_successfully">Preferences and Availability updated successfully!</string>
    <string name="username_updated_successfully">Username updated successfully!</string>
    <string name="busy_text_textview">Busy</string>
    <string name="username_availability_and_preferences_updated_successfully">Username, Availability and Preferences updated successfully!</string>
    <string name="todo_list_individual_group_title">From chat with %1$s %2$s</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="group">Group</string>
    <string name="assign_to">Assign to:</string>
    <string name="due_date">Due Date</string>
    <string name="add_new_todo_item">Add New Todo Item</string>
    <string name="date_placeholder">%d/%d/%d</string>
    <string name="time_placeholder">%1$d:%2$02d</string>
    <string name="cancel">Cancel</string>
    <string name="nav_add_friends">Add friends</string>
    <string name="log_out">Log out</string>
    <string name="add_friends">Add friends</string>
    <string name="search_users">Search</string>
    <string name="ok">OK</string>
    <string name="owes_you">%1$s owes you %2$s</string>
    <string name="you_owe">You owe %1$s %2$s</string>
    <string name="no_users_found">No users found</string>
    <string name="calendar_icon">Calendar Icon</string>
    <string name="group_icon">Group Icon</string>
    <string name="nav_new_chat">New Chat</string>
    <string name="nav_new_individual_chat">New Individual Chat</string>
    <string name="nav_new_group">New Group</string>
    <string name="fab">FAB</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="you">"You: "</string>
    <string name="name_placeholder_with_colon">"%1$s %2$s: "</string>
    <string name="name_placeholder">%1$s %2$s</string>
    <string name="individual_group_name_placeholder">Chat with %1$s %2$s</string>
    <string name="balance_placeholder">$ %1$s</string>
    <string name="you_are_owed">You are owed:</string>
    <string name="you_owe_with_colon">You owe:</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="location">Location</string>
    <string name="friends">Friends</string>
    <string name="no_friends_found">No friends found</string>
    <string name="group_members">Group members</string>
    <string name="group_name">Group Name</string>
    <string name="group_name_colon">Group Name:</string>
    <string name="create_group">Create Group</string>
    <string name="group_name_cannot_be_empty">Group name cannot be empty</string>
    <string name="group_participants_error">Please add at least 2 friends to the group</string>
    <string name="view_balance">View Balance</string>
    <string name="verify_email">Please verify your email before proceeding</string>
    <string name="resend_verification_email">Resend email</string>
    <string name="a_verification_email_has_been_sent_please_verify_your_email">A verification email has been sent to your email. Please verify your account before proceeding.</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="password_reset_email">An email with a password reset link has been sent</string>
    <string name="msg_sender_ai_with_colon">"Plantastic Bot: "</string>
    <string name="msg_sender_ai">"Plantastic Bot"</string>
    <string name="msg_content_sender_ai_placeholder">Plantastic Bot:&#160; %1$s</string>
    <string name="add_new_group_expense">Add New Group Expense</string>
    <string name="settle_balance">Settle Balance</string>
    <string name="is_paying_you_transaction">%1$s %2$s is paying you %3$s</string>
    <string name="you_are_paying_transactions">You are paying %1$s %2$s %3$s</string>
    <string name="balance_with_this_user_is_already_settled">Balance with this user is already settled</string>
    <string name="settled_balances_you">%1$s %2$s settled balances with you</string>
    <string name="you_settled_balances_with">You settled balances with %1$s %2$s</string>
    <string name="amount_cannot_be_zero">Amount cannot be zero</string>
    <string name="amount">Amount</string>
    <string name="paid_by">Paid by:</string>
    <string name="settle_with">Settle with:</string>
    <string name="you_lent">You lent $%1$s</string>
    <string name="you_borrowed_from">You borrowed $%1$s from %2$s</string>
    <string name="paid">%1$s paid %2$s %3$s</string>
    <string name="paid_you">%1$s paid you %2$s</string>
    <string name="you_paid">You paid %1$s $%2$s</string>
    <string name="current_language">Current Language</string>
    <string name="select_language">Select Language</string>
    <string name="language_preference">Language preference</string>
</resources>