<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_chats">

    <fragment
        android:id="@+id/nav_calendar"
        android:name="com.example.plantastic.ui.calendar.CalendarFragment"
        android:label="@string/calendar"
        tools:layout="@layout/fragment_calendar" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.plantastic.ui.settings.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_chats"
        android:name="com.example.plantastic.ui.chats.ChatsFragment"
        android:label="@string/chats"
        tools:layout="@layout/fragment_chats" />

    <fragment
        android:id="@+id/nav_events"
        android:name="com.example.plantastic.ui.events.EventsFragment"
        android:label="@string/events"
        tools:layout="@layout/fragment_events" />

    <fragment
        android:id="@+id/nav_balance"
        android:name="com.example.plantastic.ui.balances.BalancesFragment"
        android:label="@string/balances"
        tools:layout="@layout/fragment_balances" />

    <fragment
        android:id="@+id/nav_to_do"
        android:name="com.example.plantastic.ui.toDo.ToDoFragment"
        android:label="@string/to_do"
        tools:layout="@layout/fragment_to_do" />
</navigation>