<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single"
        android:id="@+id/nav_group">
        <item
            android:id="@+id/nav_add_friends"
            android:icon="@drawable/baseline_person_add_24"
            android:title="@string/add_friends" />
        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/baseline_calendar_month_24"
            android:title="@string/calendar" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/baseline_settings_24"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_menu_logout"
            android:title="@string/log_out" />
    </group>
</menu>