<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/rounded_borders_15dp"
        android:backgroundTint="@color/write_msg_background"
        android:layout_marginHorizontal="10dp"
        android:paddingVertical="10dp">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/addEventAddDialog"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/baseline_deck_24"
            android:background="@drawable/rounded_borders_50dp"
            android:backgroundTint="@color/pastel_violet"
            android:contentDescription="@string/content_desc_add_new_event" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/addTodoAddDialog"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/baseline_list_alt_24"
            android:background="@drawable/rounded_borders_50dp"
            android:backgroundTint="@color/pastel_coral"
            android:contentDescription="@string/content_desc_add_new_todo_item" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/addExpenseAddDialog"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/receipt_text_plus_outline"
            android:background="@drawable/rounded_borders_50dp"
            android:backgroundTint="@color/pastel_green_dark"
            android:contentDescription="@string/content_desc_add_new_expenses" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/settleBalanceAddDialog"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/scale_balance"
            android:background="@drawable/rounded_borders_50dp"
            android:backgroundTint="@color/pastel_sky_blue_dark"
            android:contentDescription="@string/content_desc_settle_balances" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>


</LinearLayout>