<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.SettingsFragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/food_preference_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--     Start of food preferences       -->
            <TextView
                android:id="@+id/food_preferences_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:text="@string/your_current_food_preferences"
                android:layout_marginBottom="10dp"/>
            <TextView
                android:id="@+id/food_preferences_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="Indian, Chinese, Japanese"
                android:layout_marginBottom="10dp"/>
            <EditText
                android:id="@+id/food_preferences_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:hint="@string/food_preference_hint"
                android:textSize="18dp"
                android:layout_marginBottom="10dp"/>

            <!--    Start of dietary restrictions     -->
            <TextView
                android:id="@+id/dietary_restrictions_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:text="@string/your_current_dietary_restrictions"
                android:layout_marginBottom="10dp"/>
            <Spinner
                android:id="@+id/dietary_restrictions_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:entries="@array/dietary_options"
                android:layout_marginBottom="10dp"/>

            <!--      Start of activity preferences      -->
            <TextView
                android:id="@+id/activity_preferences_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:text="@string/your_current_activity_preferences"
                android:layout_marginBottom="10dp"/>
            <EditText
                android:id="@+id/activity_preferences_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:hint="@string/food_preference_hint"
                android:textSize="18dp"
                android:layout_marginBottom="10dp"/>

            <!--      Start of availability preferences         -->
            <TextView
                android:id="@+id/availability_preferences_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:text="@string/your_availability"
                android:layout_marginBottom="10dp"/>
            <EditText
                android:id="@+id/availability_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:textSize="18dp"
                android:hint="@string/food_preference_hint"
                android:layout_marginBottom="10dp"/>
        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>